--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "earley.js",
+  "name": "persil.js",
   "description": "A JavaScript implementation of an Earley parser",
   "version": "0.0.1",
   "keywords": [
@@ -14,5 +14,6 @@
     "grunt": "^0.4.5",
     "grunt-babel": "^5.0.1",
     "load-grunt-tasks": "^3.2.0"
-  }
+  },
+  "main": "dist/index.js"
 }
