--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "url": "http://guillaume.baierouge.fr"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-babel": "^5.0.1",
+    "babel-cli": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
+    "grunt": "^1.0.0",
+    "grunt-babel": "^6.0.0",
     "load-grunt-tasks": "^3.2.0"
   },
   "main": "dist/index.js"
