--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "persil.js",
   "description": "A JavaScript implementation of an Earley parser",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "keywords": [
     "Earley",
     "parser"
@@ -10,12 +10,16 @@
     "name": "Guillaume Savaton",
     "url": "http://guillaume.baierouge.fr"
   },
+  "repository": {
+      "type": "git",
+      "url": "https://github.com/senshu/Persil.js.git"
+  },
   "devDependencies": {
     "babel-cli": "^6.9.0",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-env": "^1.7.0",
     "grunt": "^1.0.0",
-    "grunt-babel": "^6.0.0",
-    "load-grunt-tasks": "^3.2.0"
+    "grunt-babel": "^7.0.0",
+    "load-grunt-tasks": "^4.0.0"
   },
   "main": "dist/index.js"
 }
