--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "persil.js",
   "description": "A JavaScript implementation of an Earley parser",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "keywords": [
     "Earley",
     "parser"
@@ -21,5 +21,8 @@
     "grunt-babel": "^7.0.0",
     "load-grunt-tasks": "^4.0.0"
   },
-  "main": "dist/index.js"
+  "main": "dist/index.js",
+  "scripts": {
+      "build": "grunt"
+  }
 }
