--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
     "url": "http://guillaume.baierouge.fr"
   },
   "repository": {
-      "type": "git",
-      "url": "https://github.com/senshu/Persil.js.git"
+    "type": "git",
+    "url": "https://github.com/senshu/Persil.js.git"
   },
   "devDependencies": {
-    "babel-cli": "^6.9.0",
-    "babel-preset-env": "^1.7.0",
-    "grunt": "^1.0.0",
-    "grunt-babel": "^7.0.0",
-    "load-grunt-tasks": "^4.0.0"
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "grunt": "^1.0.4",
+    "grunt-babel": "^8.0.0",
+    "load-grunt-tasks": "^5.0.0"
   },
   "main": "dist/index.js",
   "scripts": {
-      "prepare": "grunt"
+    "prepare": "grunt"
   }
 }
